--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$dark: rgb(82, 82, 82);
-$light: rgb(238, 238, 238);
-$accent: rgb(233, 73, 73);
+$dark: #525252;
+$light: #eeeeee;
+$accent: #e94949;
 // FONTS
 $primary: 'Quicksand', sans-serif;
 $secondary: 'Abel', sans-serif;
