--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,27 +1,30 @@
 .home {
-    width: 100%;
-    font-family: $primary;
+    width: 100%; 
+    color: $dark;   
 }
 
 .posts {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .post {
     width: 27%;
-    margin: 2%;
+    margin: 2% 0;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     &__title {
         font-size: 18px;
+        font-weight: 600;
+        font-family: $secondary;        
     }
     &__content {
         font-size: 16px;
+        font-family: $primary;
     }
     &__img {
         width: 100%;
