--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -8,6 +8,7 @@
     font-family: $secondary;
     font-size: 16px;
     font-weight: 400;
+    border-radius: 5px;
     text-transform: uppercase;
     background-color: #ffffff;
     border: 1px solid $dark;
