--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,5 +2,6 @@
 // Components Imports
 // ===============================================================
 
+@import 'authForm';
 @import 'header';
 @import 'home';
