--- a/src/scss/components/_authForm.scss
+++ b/src/scss/components/_authForm.scss
@@ -47,14 +47,23 @@
     }
     &-form {        
         width: 100%; 
-        height: 300px;
+        min-height: 300px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         font-family: $secondary;
         font-size: 16px;
         font-weight: 400;       
-        color: $dark;        
+        color: $dark; 
+        &__error {
+            font-family: $secondary;
+            font-size: 14px;
+            font-weight: 400;
+            color: $accent;
+            margin-left: 10px;
+            margin-bottom: 5px;
+            text-transform: none;
+        }       
         &__inputs {
             display: flex;
             flex-direction: column;
@@ -122,7 +131,7 @@
 .forms {
     display: flex;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .tab {
