--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -101,3 +101,19 @@ $secondary: 'Roboto Condensed', sans-serif;
     transform: translate3d(0, 0, 0);
   }
 }
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
