--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,3 +1,46 @@
+.hero {     
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    &__img {
+        width: 60%;
+    }
+    &__content {
+        color: $dark;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    &__title {
+        width: 85%;
+        text-align: center;
+        font-size: 38px;
+        font-weight: 600;
+        font-family: $secondary;
+        line-height: 44px;
+        margin-bottom: 25px;
+        &:hover {
+            color: $dark;
+            text-decoration: underline;
+            text-decoration-color: $accent;
+        }
+    }
+    &__author {
+        cursor: pointer;
+        font-size: 20px;
+        font-weight: 400;
+        font-family: $secondary;
+        transition: all .3s ease-in-out;
+        margin-bottom: 30px;
+        &:hover {
+            color: $accent;
+        }
+    }
+}
+
 .home {
     width: 100%; 
     color: $dark;   
