--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     &__img {
         width: 60%;
     }
@@ -43,7 +43,17 @@
 
 .home {
     width: 100%; 
-    color: $dark;   
+    color: $dark; 
+    &__title {
+        text-transform: uppercase;
+        font-size: 30px;
+        margin-bottom: 30px;
+        cursor: pointer;
+        &:hover {
+            text-decoration: underline;
+            text-decoration-color: $accent;
+        }
+    }  
 }
 
 .posts {
@@ -54,23 +64,40 @@
 }
 
 .post {
-    width: 27%;
-    margin: 2% 0;
+    width: 32%;
+    margin: 1% 0;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
+    flex-direction: column;    
+    &__img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        min-height: 200px;
+    }
+    &__overlay {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        img {
+            object-fit: cover;
+        }
+    }
     &__title {
         font-size: 18px;
         font-weight: 600;
         font-family: $secondary;        
     }
     &__content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         font-size: 16px;
         font-family: $primary;
-    }
-    &__img {
-        width: 100%;
-        max-width: 500px;
     }
 }
