--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -67,7 +67,8 @@
     width: 32%;
     margin: 1% 0;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;   
+    border-radius: 5px; 
     &__img {
         display: flex;
         align-items: center;
@@ -76,6 +77,15 @@
         width: 100%;
         overflow: hidden;
         min-height: 200px;
+    }
+    .like-btn {
+        color: $light;
+        position: absolute;
+        bottom: 15px;
+        left: 20px;
+        &:hover {
+            color: $accent;
+        }
     }
     &__overlay {
         display: flex;
@@ -86,12 +96,21 @@
         height: 100%;
         img {
             object-fit: cover;
+            transition: all .3s linear;
+        }
+        &:hover img {
+            transform: scale(1.1);
         }
     }
     &__title {
         font-size: 18px;
         font-weight: 600;
-        font-family: $secondary;        
+        font-family: $secondary;  
+        margin: 15px 0; 
+        transition: all .3s ease-in-out; 
+        &:hover {
+            color: $accent;
+        }    
     }
     &__content {
         display: flex;
